--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kapolos/pramda",
+    "name": "fftg9m/pramda",
     "description": "Toolkit for Practical Functional Programming in PHP",
     "minimum-stability": "dev",
     "license": "MIT",
